<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Triathalon Registration App</string>
    <string name="btnCost">FIND THE COST</string>
    <string name="description">Triathalon Image</string>
    <string name="prompt">Select Group</string>
    <string name="txtTickets">Number of Members</string>
    <string name="txtTitle">Triathalon Registration</string>
    <string-array name="txtGroup">
        <item>Lake Placid</item>
        <item>Big Island Hawaii</item>
        <item>Miami</item>
    </string-array>
</resources>